--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,18 +6,25 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch primeFactorisation",
+            "request": "launch",
+            "mainClass": "Pep.GettingStarted.primeFactorisation",
+            "projectName": "Practice Questions_c7494f64"
+        },
+        {
+            "type": "java",
             "name": "Attach",
             "request": "attach",
             "hostName": "localhost",
             "port": "<debug port of the debuggee>"
         },
-    {
-        "type": "java",
-        "name": "Attach",
-        "request": "attach",
-        "hostName": "localhost",
-        "port": "<debug port of the debuggee>"
-    },
+        {
+            "type": "java",
+            "name": "Attach",
+            "request": "attach",
+            "hostName": "localhost",
+            "port": "<debug port of the debuggee>"
+        },
         {
             "type": "java",
             "name": "Launch a",
