--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Pep/Arrays",
         "Pep/2-DArray",
         "Hackerrank",
-        "Codeforces"
+        "Codeforces",
+        "Pep/RecursionOnTheWayUp"
     ]
 }
