--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Hackerrank",
         "Codeforces",
         "Codechef",
-        "Graphs"
+        "Graphs",
+        "Hashing",
     ]
 }
