--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,11 @@
         "Pep/RecursionOnTheWayUp",
         "Pep/Arrays",
         "Pep/2-DArray",
-        "Hackerrank",
-        "Codeforces",
-        "Codechef",
-        "Graphs",
+        "Pep",
         "Hashing",
+        "Hackerrank",
+        "Graphs",
+        "Codeforces",
+        "Codechef"
     ]
 }
