--- a/Pep/.vscode/settings.json
+++ b/Pep/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "java.project.sourcePaths": [
-        "2-DArray"
-        "ArrayList"
-        "Recursion"
+        "2-DArray",
+        "ArrayList",
+        "Recursion",
+        "ArrayAndRecursion",
+        "BackTracking",
+        "Arrays",
+        "RecursionOnTheWayUp",
     ]
 }
