--- a/Web Development/WebScrapRev/GithubScrap/package.json
+++ b/Web Development/WebScrapRev/GithubScrap/package.json
@@ -1,12 +1,16 @@
 {
   "name": "GithubScrap",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jspdf": "^2.3.1"
+  },
+  "devDependencies": {},
+  "description": ""
 }
