--- a/Level2/.vscode/settings.json
+++ b/Level2/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "java.project.sourcePaths": [
         "RecursionAndBackTracking",
+        "Leetcode",
+        "BitsManipulation"
     ]
 }
