--- a/Level2/.vscode/settings.json
+++ b/Level2/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.sourcePaths": [
         "RecursionAndBackTracking",
         "Leetcode",
-        "BitsManipulation"
+        "BitsManipulation",
+        "DynamicProgramming"
     ]
 }
