--- a/Level2/.vscode/settings.json
+++ b/Level2/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.project.sourcePaths": [
         "RecursionAndBackTracking",
         "Leetcode",
+        "DynamicProgramming",
         "BitsManipulation",
-        "DynamicProgramming"
+        "CodeChef"
     ]
 }
