--- a/Level2/.vscode/settings.json
+++ b/Level2/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
-    "java.project.sourcePaths": [
-        "RecursionAndBackTracking",
-        "Leetcode",
-        "DynamicProgramming",
-        "BitsManipulation",
-        "CodeChef"
-    ]
+  "java.project.sourcePaths": [
+    "RecursionAndBackTracking",
+    "Leetcode",
+    "DynamicProgramming",
+    "BitsManipulation",
+    "CodeChef"
+  ],
+  "C_Cpp_Runner.cCompilerPath": "C:\\MinGW\\bin\\gcc.exe",
+  "C_Cpp_Runner.cppCompilerPath": "C:\\MinGW\\bin\\g++.exe",
+  "C_Cpp_Runner.debuggerPath": "C:\\MinGW\\bin\\gdb.exe",
+  "C_Cpp_Runner.makePath": "C:\\MinGW\\msys\\1.0\\bin\\make.exe"
 }
