--- a/Level2/.vscode/settings.json
+++ b/Level2/.vscode/settings.json
@@ -3,8 +3,9 @@
     "RecursionAndBackTracking",
     "Leetcode",
     "DynamicProgramming",
+    "CodeChef",
     "BitsManipulation",
-    "CodeChef"
+    "Trees"
   ],
   "C_Cpp_Runner.cCompilerPath": "C:\\MinGW\\bin\\gcc.exe",
   "C_Cpp_Runner.cppCompilerPath": "C:\\MinGW\\bin\\g++.exe",
