--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "Level2/BitsManipulation",
+        "Level1/tree",
         "Level1/Linked List",
-        "Level1/tree"
+        "Level2/DynamicProgramming"
     ]
 }
